--- a/src/app/components/skills/skills.component.html
+++ b/src/app/components/skills/skills.component.html
@@ -21,7 +21,7 @@
                                 <stop offset="1" stop-color="#1BB3D6"/>
                             </linearGradient>                    
                         </defs>
-                        <circle class="postman" cx="50%" cy="50%" r="50" stroke-linecap="round" />
+                        <circle class="postman" cx="50%" cy="50%" r="50" stroke-linecap="round" [ngStyle]="{}"/>
                     </svg>
                 </div>
             </div>
