--- a/src/app/components/services/services.component.html
+++ b/src/app/components/services/services.component.html
@@ -1,5 +1,5 @@
 <section class="services">
-    <h3 class="tittle">Services</h3>
+    <h3 id="sec1" class="tittle">Services</h3>
     <div class="services_grid">
         <ng-container *ngFor="let service of services">
             <div class="service">
