--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,20 +1,20 @@
-<body style="background: #F76525 ;">
+<body>
     <div class="center">
         <h1>Welcome to your Portfolio</h1>
         <a href="#"><i class="fa-solid fa-circle-xmark"></i></a>
-        <form method="post">
+        <form [formGroup]="formLogin" (submit)="send()">
             <div class="txt_field">
-                <input type="text" required>
+                <input type="text" formControlName="email">
                 <span></span>
                 <label>Email</label>
             </div>
             <div class="txt_field">
-                <input type="password" required>
+                <input type="password" formControlName="password">
                 <span></span>
                 <label>Password</label>
             </div>
             <div class="pass">Forgot password?</div>
-            <input type="submit" value="Login">
+            <input type="submit" value="Login" [disabled]="formLogin.invalid">
             <span class="copyright">© Ivan Litt - All rights reserved</span>
         </form>
     </div>
