--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,3 @@
-<body>
-    <app-navbar></app-navbar>
-    <app-landing></app-landing>
-    <app-skills></app-skills>
-    <app-idiom></app-idiom>
-    <app-projets></app-projets>
-    <app-services></app-services>
-    <app-education></app-education>
-    <app-experience></app-experience>
-    <app-copyright></app-copyright>
-</body>
-<router-outlet></router-outlet>
+<div>
+    <router-outlet></router-outlet>
+</div>
