--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -19,7 +19,7 @@
             <li class="menu_item">
                 <a href="https://github.com/ivanlitt8" class="menu_link"><i class="fa-brands fa-github"></i></a>
                 <a href="https://www.linkedin.com/in/ivan-litt-71a6381b2/" class="menu_link"><i class="fa-brands fa-linkedin"></i></a>
-                <a routerLink="/login" class="menu_link"><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                <a routerLink="/iniciar-sesion" class="menu_link"><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
             </li>
         </ul>
         <div #menu (click)="toggle()" class="menu_hamburguer" >
