--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -25,7 +25,6 @@
 }
 form .txt_field{
   position:relative;
-  border-bottom: 2px solid #adadad;
   margin: 30px 0;
 }
 .txt_field input{
@@ -71,6 +70,9 @@ form .txt_field{
 }
 .pass:hover{
   text-decoration: underline;
+}
+.submitButton:active {
+  background-color: gray;
 }
 input[type='submit']{
   width: 100%;
