Separacion carpeta FrontEnd

--- a/src/app/components/experience/experience.component.html
+++ b/src/app/components/experience/experience.component.html
@@ -11,7 +11,7 @@
     <div class="experience_grid">
         <ng-container *ngFor="let experience of experienceList">
             <div class="experience_card">
-                <span>{{experience.start}} - {{experienceList.end}}</span>
+                <span>{{experience.start}} - {{experience.end}}</span>
                 <h4>{{experience.job}}</h4>
                 <span class="experience_place">{{experience.site}}</span>
                 <p>
