Coneccion a base de datos

--- a/FrontEnd/src/app/components/landing/landing.component.html
+++ b/FrontEnd/src/app/components/landing/landing.component.html
@@ -1,7 +1,7 @@
 <section class="containerLanding">
     <div class="about">
-        <div class="about_stack"><h2>{{miPortfolio?.position}}</h2></div>
-        <div class="about_nombre"><h1>{{miPortfolio?.name}}</h1></div>
+        <div class="about_stack"><h2>{{persona.nombre}}<!--{{miPortfolio?.position}}--></h2></div> 
+        <div class="about_nombre"><h1>{{persona.nombre}}<!--{{miPortfolio?.name}}--></h1></div>
         <div class="about_bar"></div>
         <div class="about_text">
             <p>
@@ -10,7 +10,7 @@
             </p>
         </div>
         <div class="about_locate">
-            <i class="fa-solid fa-street-view"></i><span> {{miPortfolio?.ubication}}</span>
+            <i class="fa-solid fa-street-view"></i><span>{{persona.nombre}}<!--{{miPortfolio?.ubication}}--></span>
         </div>        
     </div>
     <img class="miguel" src="/assets/resources/miguelPng.png" alt="LandingImg">
