--- a/FrontEnd/src/app/components/login/login.component.html
+++ b/FrontEnd/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <body>
     <div class="center">
         <h1>Welcome to your Portfolio</h1>
-        <a routerLink="/portfolio"><i class="fa-solid fa-circle-xmark"></i></a>
+        <a routerLink="/"><i class="fa-solid fa-circle-xmark"></i></a>
         <form [formGroup]="formLogin" (submit)="send()">
             <div class="txt_field">
                 <input type="email" formControlName="email">
