Cambios en el back, login completado con ingreso, roles y guards

--- a/FrontEnd/src/app/components/navbar/navbar.component.html
+++ b/FrontEnd/src/app/components/navbar/navbar.component.html
@@ -18,11 +18,15 @@
             </li>
             <li class="menu_item">
                 <a href="https://github.com/ivanlitt8" class="menu_link"><i class="fa-brands fa-github"></i></a>
-                <a href="https://www.linkedin.com/in/ivan-litt-71a6381b2/" class="menu_link"><i class="fa-brands fa-linkedin"></i></a>
-                <a routerLink="/iniciar-sesion" class="menu_link"><i class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                <a href="https://www.linkedin.com/in/ivan-litt-71a6381b2/" class="menu_link"><i
+                        class="fa-brands fa-linkedin"></i></a>
+                <a routerLink="/iniciar-sesion" class="menu_link" *ngIf="!isLogged"><i
+                        class="fa-solid fa-arrow-right-to-bracket"></i></a>
+                <a routerLink="/iniciar-sesion" class="menu_link" (click)="onLogOut()" *ngIf="isLogged"><i
+                        class="fa-solid fa-arrow-right-from-bracket"></i></a>
             </li>
         </ul>
-        <div #menu (click)="toggle()" class="menu_hamburguer" >
+        <div #menu (click)="toggle()" class="menu_hamburguer">
             <img src="/assets/resources/menu.svg" class="menu_img">
         </div>
     </section>
