--- a/FrontEnd/src/app/components/login/login.component.html
+++ b/FrontEnd/src/app/components/login/login.component.html
@@ -2,34 +2,39 @@
     <div class="center">
         <h1>Welcome to your Portfolio</h1>
         <a routerLink="/"><i class="fa-solid fa-circle-xmark"></i></a>
-        <form [formGroup]="formLogin" (submit)="send()">
+        <form #f="ngForm" (ngSubmit)="onLogin()" novalidate>
             <div class="txt_field">
-                <input type="email" formControlName="email">
+                <input type="text" id="nombreUsuario" name="nombreUsuario" class="form-control form-control lg"
+                    [(ngModel)]="nombreUsuario" required />
+                <label class="form-label" for="nombreUsuario">Usuario</label>
                 <span></span>
-                <label>Email</label>
-                <div *ngIf="Email?.errors && Email?.touched">
-                    <p *ngIf="Email?.hasError('required')" class="text-danger">
+                <!-- <div>
+                    <p class="text-danger">
                         Email is required
                     </p>
-                    <p *ngIf="Email?.hasError('email')" class="text-danger">
+                    <p class="text-danger">
                         The email format must be valid
-                    </p>                
-                </div>
+                    </p>
+                </div> -->
             </div>
             <div class="txt_field">
-                <input type="password" formControlName="password">
+                <input type="password" id="password" name="password" class="form-control form-control lg"
+                    [(ngModel)]="password" required />
                 <span></span>
-                <label>Password</label>
-                <div *ngIf="Password?.errors && Password?.touched">
-                    <p *ngIf="Password?.hasError('required')" class="text-danger">
+                <label class="form-label" for="password">Password</label>
+                <!-- <div>
+                    <p class="text-danger">
                         Password is required
-                    </p>             
-                </div>
+                    </p>
+                </div> -->
             </div>
-            <div class="pass">Forgot password?</div>
-            <input class="submitButton" type="submit" value="Login" [disabled]="formLogin.invalid">
+            <div class="pass">¿Forgot password?</div>
+            <div class="pass">Create an account</div>
+            <input class="submitButton" type="submit" value="Login">
             <span class="copyright">© Ivan Litt - All rights reserved</span>
         </form>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
+        crossorigin="anonymous"></script>
 </body>
