CRUD Experiencia Laboral exitoso, archivos tests eliminados, componentes innecesarios eliminados

--- a/FrontEnd/src/app/components/experience/experience.component.css
+++ b/FrontEnd/src/app/components/experience/experience.component.css
@@ -1,57 +1,106 @@
-
-
 /*---------------------------Experience---------------------------*/
 
-.experience h3{
-    position: relative;
-    top: -600px;
-    color: white;
-    margin-left: 10%;
-  }
-  .tittle{
-    font-size: 60px;
-  }
-  .experience_grid{
-    margin: 0 auto;
-    gap: 20px;
-    top: -600px;
-    position: relative;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    width: 80%;
-    justify-content: center;
-  }
-  .experience_card {
-    background-color: #282D29;
-    padding: 25px;
-    width: 330px;
-    color: white;
-  }
-  .experience_card:hover {
-    transition: .5s;
-    transform:scale(1.040);  
-  }
-  .experience_card h4 {
-    color: white; 
-    font-size: 28px;
-  }
-  .experience_card p {
-    font-size: 16px;
-    width: 100%;
-  }
-  .experience_card span{
-    font-size: 18px;
-    font-weight: 500; 
-  }
-  .experience_place{
-    position: relative;
-    top: -5px;
-  }
-  .experience_text p{
-    position: relative;
-    top: -600px;
-    width: 65%;
-    color: white;
-    margin-left: 10%;
-  }
+.experience h3 {
+  position: relative;
+  top: -600px;
+  color: white;
+  margin-left: 10%;
+}
+
+.tittle {
+  font-size: 60px;
+}
+
+.experience_grid {
+  margin: 0 auto;
+  gap: 20px;
+  top: -600px;
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  width: 80%;
+  justify-content: center;
+}
+
+.experience_card {
+  background-color: #282D29;
+  padding: 25px;
+  width: 330px;
+  height: 330px;
+  color: white;
+}
+
+.experience_card:hover {
+  transition: .5s;
+  transform: scale(1.040);
+}
+
+.experience_card h4 {
+  color: white;
+  font-size: 28px;
+}
+
+.experience_card p {
+  font-size: 16px;
+  width: 100%;
+}
+
+.experience_card span {
+  font-size: 18px;
+  font-weight: 500;
+}
+
+.experience_place {
+  position: relative;
+  top: -5px;
+}
+
+.experience_text p {
+  position: relative;
+  top: -600px;
+  width: 65%;
+  color: white;
+  margin-left: 10%;
+}
+
+i.fa-solid.fa-circle-plus {
+  margin-left: 20px;
+  font-size: 40px;
+  color: white;
+}
+
+i.fa-solid.fa-circle-plus:hover {
+  cursor: pointer;
+  color: orangered;
+  transition: 0.5s;
+}
+
+i.fa-regular.fa-pen-to-square {
+  font-size: 26px;
+  color: white;
+  float: right;
+  position: relative;
+  bottom: 15px;
+  left: 15px;
+}
+
+i.fa-regular.fa-pen-to-square:hover {
+  cursor: pointer;
+  color: orangered;
+  transition: 0.5s;
+}
+
+i.fa-solid.fa-trash-can {
+  color: white;
+  font-size: 26px;
+  position: relative;
+  top: 200px;
+  left: 120px;
+}
+
+i.fa-solid.fa-trash-can:hover {
+  cursor: pointer;
+  color: orangered;
+  transition: 0.5s;
+}
