--- a/FrontEnd/src/app/components/experience/edit-experience.component.html
+++ b/FrontEnd/src/app/components/experience/edit-experience.component.html
@@ -3,16 +3,33 @@
         <div>
             <form (ngSubmit)="onUpdate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Nombre Empresa</label>
+                    <label for="nombreE">Company name</label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="expLab.nombreE"
                         required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionE">Descripcion del puesto</label>
+                    <label for="cargoE">Role</label>
+                    <input type="text" class="form-control" id="cargoE" name="cargoE" [(ngModel)]="expLab.cargoE"
+                        required>
+                </div>
+                <div class="form-group">
+                    <label for="descripcionE">Job Description</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE"
                         [(ngModel)]="expLab.descripcionE" required>
                 </div>
-                <button class="btn btn-primary">Actualizar</button>
+                <div class="form-group">
+                    <label for="fechaInicioE">Start date</label>
+                    <input type="text" class="form-control" id="fechaInicioE" name="fechaInicioE"
+                        [(ngModel)]="expLab.fechaInicioE" required>
+                </div>
+                <div class="form-group">
+                    <label for="fechaFinE">End date</label>
+                    <input type="text" class="form-control" id="fechaFinE" name="fechaFinE"
+                        [(ngModel)]="expLab.fechaFinE">
+                </div>
+                <div class="button-container">
+                    <button class="btn btn-primary">Update</button>
+                </div>
             </form>
         </div>
     </div>
