--- a/FrontEnd/src/app/components/experience/new-experience.component.html
+++ b/FrontEnd/src/app/components/experience/new-experience.component.html
@@ -3,15 +3,30 @@
         <div>
             <form (ngSubmit)="onCreate()" novalidate #f="ngForm">
                 <div class="form-group">
-                    <label for="nombreE">Nombre Empresa</label>
+                    <label for="nombreE">Company name</label>
                     <input type="text" class="form-control" id="nombreE" name="nombreE" [(ngModel)]="nombreE" required>
                 </div>
                 <div class="form-group">
-                    <label for="descripcionE">Descripcion del puesto</label>
+                    <label for="descripcionE">Job Description</label>
                     <input type="text" class="form-control" id="descripcionE" name="descripcionE"
                         [(ngModel)]="descripcionE" required>
                 </div>
-                <button class="btn btn-primary">Agregar experiencia</button>
+                <div class="form-group">
+                    <label for="cargoE">Role</label>
+                    <input type="text" class="form-control" id="cargoE" name="cargoE" [(ngModel)]="cargoE" required>
+                </div>
+                <div class="form-group">
+                    <label for="fechaInicioE">Start date</label>
+                    <input type="text" class="form-control" id="fechaInicioE" name="fechaInicioE"
+                        [(ngModel)]="fechaInicioE" required>
+                </div>
+                <div class="form-group">
+                    <label for="fechaFinE">End date</label>
+                    <input type="text" class="form-control" id="fechaFinE" name="fechaFinE" [(ngModel)]="fechaFinE">
+                </div>
+                <div class="button-container">
+                    <button class="btn btn-primary">add experience</button>
+                </div>
             </form>
         </div>
     </div>
