--- a/FrontEnd/src/app/components/education/education.component.html
+++ b/FrontEnd/src/app/components/education/education.component.html
@@ -1,6 +1,26 @@
 <section class="education">
-    <h3 class="tittle">Education</h3>                                                                                 
-    <div *ngFor="let education of educationList" class="education_grid">
+    <h3 class="tittle">Education<a routerLink="/nuevaedu" *ngIf="isLogged">
+            <i class="fa-solid fa-circle-plus"></i></a>
+    </h3>
+    <div *ngFor="let Education of educacion" class="education_grid">
+        <div class="educations">
+            <!-- <img [src]="education?.url"> -->
+            <div class="educations_text">
+                <h4>{{Education.nombreE}}</h4>
+                <div class="education_data">
+                    <span>{{Education.descripcionE}}</span>
+                    <span>FECHA INICIO - FECHA FIN</span>
+                    <a (click)="delete(Education.id)" *ngIf="isLogged">
+                        <i class="fa-solid fa-trash-can"></i>
+                    </a>
+                </div>
+                <a routerLink="/editedu/{{Education.id}}" *ngIf="isLogged">
+                    <i class="fa-regular fa-pen-to-square"></i>
+                </a>
+            </div>
+        </div>
+    </div>
+    <!-- <div *ngFor="let education of educationList" class="education_grid">
         <div class="educations">
             <img [src]="education?.url">
             <div class="educations_text">
@@ -11,5 +31,5 @@
                 </div>
             </div>
         </div>
-    </div>
+    </div> -->
 </section>
